Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2743

Crash with SPDY on production environment in SpdyNV::SpdyNV

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.0.0
    • Core, SPDY

    Description

      After patching a fix (by removing the apparent incorrect assert failure on non-ipv4 address in TsFetchCreate - jira ts-2742), noticed a new crash, this time in SpdyNV::SpdyNV with the below stack trace. Will update more upon investigation.

      FATAL: SpdyCommon.cc:133: failed assert `value && value_len`
      FATAL: SpdyCommon.cc:133: failed assert `value && value_len`
      /home/y/bin/traffic_server - STACK TRACE:
      /home/y/bin/traffic_server - STACK TRACE:
      /home/y/lib64/libtsutil.so.5(+0x1f5c8)[0x2b7371f6a5c8]
      /home/y/lib64/libtsutil.so.5(+0x1f5c8)[0x2b7371f6a5c8]
      /home/y/lib64/libtsutil.so.5(+0x1da8f)[0x2b7371f68a8f]
      /home/y/lib64/libtsutil.so.5(+0x1da8f)[0x2b7371f68a8f]
      /home/y/bin/traffic_server[0x4af739]
      /home/y/bin/traffic_server[0x5cf7ea]
      /home/y/bin/traffic_server[0x5d0a6a]
      /home/y/bin/traffic_server(_ZN7FetchSM15InvokePluginExtEi+0x33a)[0x4c7a5a]
      /home/y/bin/traffic_server[0x4af739]
      /home/y/bin/traffic_server(_ZN7FetchSM18process_fetch_readEi+0x187)[0x4c7f37]
      /home/y/bin/traffic_server[0x5cf7ea]
      /home/y/bin/traffic_server[0x5d0a6a]
      /home/y/bin/traffic_server(_ZN7FetchSM15InvokePluginExtEi+0x33a)[0x4c7a5a]
      /home/y/bin/traffic_server(_ZN7FetchSM18process_fetch_readEi+0x187)[0x4c7f37]
      /home/y/bin/traffic_server(_ZN7FetchSM13fetch_handlerEiPv+0x8b)[0x4c80eb]
      /home/y/bin/traffic_server(_ZN8PluginVC17process_read_sideEb+0x375)[0x4dd0d5]
      /home/y/bin/traffic_server(_ZN8PluginVC18process_write_sideEb+0x57a)[0x4dda2a]
      /home/y/bin/traffic_server(_ZN7FetchSM13fetch_handlerEiPv+0x8b)[0x4c80eb]
      /home/y/bin/traffic_server(_ZN8PluginVC12main_handlerEiPv+0x372)[0x4de272]
      /home/y/bin/traffic_server(_ZN8PluginVC17process_read_sideEb+0x375)[0x4dd0d5]
      /home/y/bin/traffic_server(_ZN7EThread13process_eventEP5Eventi+0x8f)[0x712f7f]
      /home/y/bin/traffic_server(_ZN8PluginVC18process_write_sideEb+0x57a)[0x4dda2a]
      /home/y/bin/traffic_server(_ZN7EThread7executeEv+0x61b)[0x713aab]
      /home/y/bin/traffic_server(_ZN8PluginVC12main_handlerEiPv+0x372)[0x4de272]
      /home/y/bin/traffic_server[0x71232a]
      /home/y/bin/traffic_server(_ZN7EThread13process_eventEP5Eventi+0x8f)[0x712f7f]
      /lib64/libpthread.so.0(+0x3297207851)[0x2b7372601851]
      /home/y/bin/traffic_server(_ZN7EThread7executeEv+0x61b)[0x713aab]
      /lib64/libc.so.6(clone+0x6d)[0x3296ee890d]
      /home/y/bin/traffic_server[0x71232a]
      /lib64/libpthread.so.0(+0x3297207851)[0x2b7372601851]

      Attachments

        Activity

          People

            yunkai Yunkai Zhang
            sudheerv Sudheer Vinukonda
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: