TS-2743: Ignore invalid HTTP headers in SpdyNV carefully

Any HTTP headers with empty value are invalid, SpdyNV should
ignore them carefully.

Signed-off-by: Yunkai Zhang <qiushu.zyk@taobao.com>